--- a/www/sweetalert/package.json
+++ b/www/sweetalert/package.json
@@ -1,29 +1,37 @@
 {
-  "name": "bootstrap-sweetalert",
-  "description": "A beautiful 'replacement' for JavaScript's alert",
-  "version": "0.4.2",
-  "homepage": "http://lipis.github.io/bootstrap-sweetalert/",
-  "author": "Panayiotis Lipiridis <lipiridis@gmail.com>",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://opensource.org/licenses/MIT"
-    }
+  "name": "sweetalert",
+  "version": "0.5.0",
+  "description": "A beautiful replacement for JavaScript's \"Alert\"",
+  "main": "lib/sweet-alert.js",
+  "directories": {
+    "example": "example"
+  },
+  "scripts": {
+    "test": "make test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/t4t5/sweetalert"
+  },
+  "keywords": [
+    "sweetalert",
+    "alert",
+    "modal",
+    "popup"
   ],
-  "repository" : {
-    "type" : "git",
-    "url" : "http://github.com/lipis/bootstrap-sweetalert"
+  "author": "Tristan Edwards <tristan.edwards@me.com> (http://tristanedwards.me)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/t4t5/sweetalert/issues"
   },
-  "dependencies": {
-    "bootstrap": "~3"
-  },
+  "homepage": "http://tristanedwards.me/sweetalert",
   "devDependencies": {
-    "grunt": "~0",
-    "grunt-contrib-connect": "~0",
-    "grunt-contrib-less": "~0.10",
-    "grunt-contrib-watch": "~0",
-    "grunt-contrib-uglify": "~0",
-    "grunt-open": "~0",
-    "load-grunt-tasks": "~0"
+    "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.3",
+    "gulp-jshint": "^1.9.0",
+    "gulp-minify-css": "^0.3.13",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.3.2",
+    "gulp-uglify": "^1.0.2"
   }
 }
