Added version in menu; added change logs visualisation for current version and new version; Update button in the menu; markdown support in modal with class 'modal'

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ packrat/lib*/
 tests/testthat/packrat/
 packrat-scenario*/
 restart.txt
-update.txt
+.fetched_version
+.fetched_changes
 
 .language
 # VIM
