Solved a conflict in am5_r base image; add all GRASS variable in final Dockerfile for easy session management; added a script for pre-build GRASS gisrc file, using GRASS db list of am5 project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
      - "3434:3434"
      - "3939:3939"
     volumes:
+      # docker in docker
+      - /var/run/docker.sock:/var/run/docker.sock
       # Use parent folder as volume for development
       - type: bind
         source: . 
