temp commit: windows electron; minor launcher refactoring

--- a/electron/.gitignore
+++ b/electron/.gitignore
@@ -3,30 +3,11 @@
 
 /dist
 /out
-app/docker_images
-/private/packages
-/private/plugins/*
-/private/workbench/*
-/private/storage
-/bin/*
-/lib
-/modules
-
-# Ignore specific files or folders anywhere.
-
-composer.lock
+app/modules/docker/image/accessmod.docker.gz
 node_modules
 .env
-bower.json
-
-# Exclude temporary or IDE-related files.
-
-.idea
-*.log
-*.bak
 .DS_Store
-Thumbs.db
+yarn-error.log
 
 # Preserve folders with .gitkeep files.
-
 !**/.gitkeep
