--- a/electron/package.json
+++ b/electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "accessmod",
-  "version": "5.6.56",
+  "version": "5.6.70",
   "description": "AccessMod electron docker launcher app",
   "main": "app/index.js",
   "build": {
@@ -22,7 +22,11 @@
     "make": "npm run make:mac && npm run make:win_with_docker"
   },
   "repository": "https://github.com/fxi/AccessMod_shiny",
-  "keywords": ["accessmod", "docker", "electron"],
+  "keywords": [
+    "accessmod",
+    "docker",
+    "electron"
+  ],
   "author": "Fred Moser",
   "license": "MIT",
   "devDependencies": {
@@ -63,7 +67,9 @@
           "name": "@electron-forge/maker-flatpak",
           "config": {
             "options": {
-              "categories": ["Education"]
+              "categories": [
+                "Education"
+              ]
             }
           }
         },
