Update electron builder for windows; added edit menu -> copy and paste issue;

--- a/electron/makers_docker/Dockerfile
+++ b/electron/makers_docker/Dockerfile
@@ -1,12 +1,16 @@
-FROM debian
+FROM debian:stable
 RUN dpkg --add-architecture i386
+ENV PATH="/usr/local/sbin:/usr/local/bin:"$PATH
+ENV NODE_PATH="/usr/lib/nodejs:/usr/share/nodejs"
+WORKDIR /tmp 
 RUN apt update && apt install -y \
    git \
    zip \
    openssh-client \
-   nodejs \
-   yarnpkg
-RUN ln -s /usr/bin/yarnpkg /usr/bin/yarn
+   curl \
+   && curl -L https://raw.githubusercontent.com/tj/n/master/bin/n -o n \
+   && bash n lts \
+   && npm install -g yarn 
 #
 #  hmmm. this should be done this way in one step,
 # it does not work. Wine, then add arch, then wine32.
